# kytos-gfal-plugin

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGFAL2.cmake  FindGLIB2.cmake
packaging/rpm/specs/: gfal2-plugin-kytos.spec
src/: CMakeLists.txt  gfal_kytos.c
